--- a/test-reinforcement/visualize_extended.ipynb
+++ b/test-reinforcement/visualize_extended.ipynb
@@ -1372,7 +1372,7 @@
     "\n",
     "    #print(cols)\n",
     "\n",
-    "    for column in df_train:\n",
+    "    for column in df_train_s:\n",
     "        #create list\n",
     "        df_train_list = list(df_train_s[column])\n",
     "        df_val_list = list(df_val[column])\n",
